Add professional credit bar below footer

--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
         </div>
     </footer>
     <img src="top up.png" id="scrollTopBtn" alt="Scroll to top" />
+
+        <div class="credit-bar">
+            Made with <span class="heart">&#10084;&#65039;</span> by <span class="credit-author">LegendarySumit</span>
+        </div>
 </body>
 
 </html>
