Bundle: accessibility, UX, meta tags, and scroll-to-top button fix

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ultra Edit - The Ultimate Text Editor by Embarcadero">
-    <meta name="keywords" content="Ultra Edit, Text Editor, Embarcadero, Code Editor">
+    <meta name="description" content="UltraEdit Clone - The Ultimate Text Editor by Embarcadero. Fast, secure, and feature-rich code editor for all your needs.">
+    <meta name="keywords" content="UltraEdit, Text Editor, Embarcadero, Code Editor, Download, Secure, Fast, Professional">
+    <meta property="og:title" content="UltraEdit Clone - Download the Ultimate Text Editor" />
+    <meta property="og:description" content="Try UltraEdit Clone for Windows. Fast, secure, and packed with features for developers and writers." />
+    <meta property="og:image" content="logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
@@ -17,7 +22,7 @@
     <header>
         <div class="header-container">
             <div class="left-section">
-                <img src="logo.png" width="100" height="100" alt="UE logo" class="image-container">
+                <img src="logo.png" width="100" height="100" alt="UltraEdit logo - Embarcadero" class="image-container">
                 <div class="title-group">
                     <h1 class="site-title">UltraEdit</h1>
                     <p class="caption">By Embarcadero</p>
@@ -45,7 +50,7 @@
         <div class="hero-section">
             <div class="main-part">
                 <p class="hero-title">Download <b>UltraEdit</b> for Windows</p>
-                <img src="review.png" alt="UltraEdit Review Image" class="review-image">
+                <img src="review.png" alt="UltraEdit 2025 review stars" class="review-image">
             </div>
         </div>
 
@@ -62,7 +67,7 @@
 
         <div class="down-part">
             <div class="image-part">
-                <img src="logo.png" width="100" height="100" alt="UE logo" class="image-container">
+                <img src="logo.png" width="100" height="100" alt="UltraEdit logo - Download section" class="image-container">
                 <p class="site-title">Download UltraEdit</p>
                 <p class="caption-part">v2025.0 (released 2025-06-06) | Hotfix information</p>
             </div>
@@ -248,7 +253,7 @@
     <footer class="footer-section">
         <div class="footer-container">
             <div class="footer-left">
-                <img src="logo.png" width="60" height="50" alt="UE logo" class="ultra-container">
+                <img src="logo.png" width="60" height="50" alt="UltraEdit logo - Footer" class="ultra-container">
                 <div class="ultra-div">
                     <h1 class="ultra-title">UltraEdit</h1>
                     <p class="ultra-caption">©2025 UltraEdit. All rights reserved</p>
@@ -284,11 +289,12 @@
             </div>
         </div>
     </footer>
-    <img src="top up.png" id="scrollTopBtn" alt="Scroll to top" />
+    <img src="top up.png" id="scrollTopBtn" alt="Scroll to top button" />
 
         <div class="credit-bar">
             Made with <span class="heart">&#10084;&#65039;</span> by <span class="credit-author">LegendarySumit</span>
         </div>
+<script src="script.js"></script>
 </body>
 
 </html>
