--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 <body>
     <header>
         <div class="header-container">
+            <button class="hamburger" id="hamburgerBtn" aria-label="Open navigation menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
             <div class="left-section">
                 <img src="logo.png" width="100" height="100" alt="UltraEdit logo - Embarcadero" class="image-container">
                 <div class="title-group">
@@ -30,7 +35,7 @@
             </div>
 
             <nav>
-                <ul class="nav-links">
+                <ul class="nav-links" id="navLinks">
                     <li><a href="#">Products <i class="fa-solid fa-caret-down"></i></a></li>
                     <li><a href="#">Pricing <i class="fa-solid fa-caret-down"></i></a></li>
                     <li><a href="#">Resources <i class="fa-solid fa-caret-down"></i></a></li>
