--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
 <body>
     <header>
         <div class="header-container">
-            <button class="hamburger" id="hamburgerBtn" aria-label="Open navigation menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
             <div class="left-section">
                 <img src="logo.png" width="100" height="100" alt="UltraEdit logo - Embarcadero" class="image-container">
                 <div class="title-group">
@@ -65,12 +60,12 @@
                     full
                     Windows<br>version of the text editor.</p>
                 <div class="button-section">
-                    <button class="download-button">Download Mac or Linux version</button>
+                    <button class="download-button" id="scrollToDownloads">Download Mac or Linux version</button>
                 </div>
             </div>
         </div>
 
-        <div class="down-part">
+        <div class="down-part" id="downloads">
             <div class="image-part">
                 <img src="logo.png" width="100" height="100" alt="UltraEdit logo - Download section" class="image-container">
                 <p class="site-title">Download UltraEdit</p>
